# goodluck

./: CMakeLists.txt  readme.md
examples/: CMakeLists.txt
src/: CMakeLists.txt  goodluck.h  main.cpp
src/mandelbrot/: frag.glsl  fragColor.glsl  fragJ.glsl  mandelbrot.cpp  vert.glsl
src/shaders/: fs.shader  vs.shader
